--- a/package.json
+++ b/package.json
@@ -1,8 +1,8 @@
 {
-  "name": "HiddenFocus",
+  "name": "hidden_focus",
   "version": "0.1.0",
   "private": true,
-  "homepage": "https://github.com/amelrc/HiddenFocus",
+  "homepage": "https://amelrc.github.io//HiddenFocus",
   "dependencies": {
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
