--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
+    "aos": "^2.3.4",
     "framer": "^1.2.11",
     "framer-motion": "^2.9.5",
     "react": "^17.0.1",
@@ -14,6 +15,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.0",
     "react-scroll-horizontal": "^1.6.6",
+    "react-spring": "^8.0.27",
     "react-transition-group": "^4.4.1",
     "styled-components": "^5.2.1",
     "uuid": "^8.3.1",
