scroll and dev firestore

--- a/package.json
+++ b/package.json
@@ -4,12 +4,16 @@
   "private": true,
   "homepage": "https://amelrc.github.io/HiddenFocus",
   "dependencies": {
+    "@material-ui/core": "^4.11.2",
+    "@material-ui/lab": "^4.0.0-alpha.57",
     "@testing-library/jest-dom": "^5.11.6",
     "@testing-library/react": "^11.1.2",
     "@testing-library/user-event": "^12.2.2",
     "aos": "^2.3.4",
+    "firebase": "^8.2.1",
     "framer": "^1.2.11",
     "framer-motion": "^2.9.5",
+    "informed": "^3.27.0",
     "react": "^17.0.1",
     "react-dom": "^17.0.1",
     "react-router-dom": "^5.2.0",
