--- a/package.json
+++ b/package.json
@@ -13,6 +13,7 @@
     "firebase": "^8.2.1",
     "framer": "^1.2.11",
     "framer-motion": "^2.9.5",
+    "gsap": "^3.6.0",
     "informed": "^3.27.0",
     "popmotion": "^9.1.0",
     "react": "^17.0.1",
